<resources>
    <string name="app_name">who want to be a millionaire</string>
    <string name="START_BUTTON">Start</string>
    <string name="HIGH_SCORE_BUTTON">High Score</string>
    <string name="CORRECT_ANSWER">I think the correct answer is </string>
    <string name="Next_button">Next</string>
    <string name="Choose_diff">Choose Difficult:</string>
    <string name="Choose_CATEGORY">Choose Category:</string>
    <string name="HARD_DIFF">Hard</string>
    <string name="MEDIUM_DIFF">Medium</string>
    <string name="EASY_DIFF">Easy</string>
    <string name="ENTER_YOUR_NAME">Enter Your Name</string>
    <string name="END_GAME">Game Over!</string>
    <string name="WON_MONEY">Money Earned: </string>
    <string name="BACK_TO_MENU">Back to Menu</string>
    <string name="game_rules_1">Welcome to Who Want To Be a Millionaire</string>
    <string name="game_rules_2">The contestant must answer 15 multiple-choice questions correctly in a row to win the jackpot. The contestant may quit at any time and keep their earnings. For each question, they are shown the question and four possible answers in advance before deciding whether to play on or not.</string>
    <string name="game_rules_3">The player have 3 help wheels:</string>
    <string name="game_rules_4"> Fifty fifty - remove two incorrect answers <br/>
        crowd - ask the help of the crowd <br/>
        Call phone - ask the help of a friend <br/>
        The answers of the crowd and the phone call might be incorrect so keep that in mind</string>
    <string-array name="EASY_PROGRAMMING">
        <item>How many times HIT is printed? <br/>
            int main()<br/>
            while(1)<br/>
            printf("hit")<br/>
            return 0</item>
        <item>Infinite times</item>
        <item>Compilation Error</item>
        <item>1 time</item>
        <item>Runtime Error</item>

        <item>How many loops are there in C</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>4</item>

        <item>When C Language was invented?</item>
        <item>1972</item>
        <item>1970</item>
        <item>1978</item>
        <item>1979</item>

        <item>What is the meaning of void sum (int, int);</item>
        <item>sum is a function which takes two int arguments and returns void</item>
        <item>sum is function which takes int arguments</item>
        <item>it will produce compilation error</item>
        <item>Can\'t comment</item>

        <item>The concept of two functions with same name is know as?</item>
        <item>Function Overloading</item>
        <item>Operator Overloading</item>
        <item>Function Overriding</item>
        <item>Function renaming</item>

        <item>What is the following is invalid header file in C?</item>
        <item>mathio.h</item>
        <item>math.h</item>
        <item>string.h</item>
        <item>ctype.h</item>

        <item>Library function pow() belongs to which header file?</item>
        <item>math.h</item>
        <item>mathio.h</item>
        <item>square.h</item>
        <item>stdio.h</item>

        <item>Can we declare function inside structure of C Programming?</item>
        <item>No</item>
        <item>Yes</item>
        <item>Depends on Compiler</item>
        <item>Yes but run time error</item>

        <item>Is it possible to return two values by any function?</item>
        <item>No</item>
        <item>Yes</item>
        <item>Depends on Compiler</item>
        <item>Yes but run time error</item>

        <item>Is it possible to run program without main() function?</item>
        <item>No</item>
        <item>Yes</item>
        <item>Depends on Compiler</item>
        <item>Yes but run time error</item>

        <item>How many main() function we can have in our project?</item>
        <item>1</item>
        <item>2</item>
        <item>No Limit</item>
        <item>Depends on Compiler</item>

        <item>Which programming language is more faster among these?</item>
        <item>C</item>
        <item>Java</item>
        <item>PHP</item>
        <item>Visual Basic</item>

        <item>Which one of the following is invalid macro in C programming?</item>
        <item>#elseif</item>
        <item>#error</item>
        <item>#ifndef</item>
        <item>#pragma</item>

        <item>The ASCII code of ‘0’ (zero) is?</item>
        <item>48D</item>
        <item>32H</item>
        <item>0011 1000</item>
        <item>42H</item>

        <item>The ASCII code of ‘A’ is?</item>
        <item>41H</item>
        <item>66D</item>
        <item>0100 0010</item>
        <item>0110 0011</item>

        <item>Which operator can not be overloaded?</item>
        <item>::</item>
        <item>+</item>
        <item>-</item>
        <item>*</item>

        <item>What is currect syntax of for loop?</item>
        <item>for(initialization;condition; increment/decrement)</item>
        <item>for(increment/decrement; initialization; condition)</item>
        <item>for(initialization, condition, increment/decrement)</item>
        <item>None</item>

        <item>Can we overload functions in C++?</item>
        <item>Yes</item>
        <item>No</item>
        <item>Compilation Error</item>
        <item>Runtime Error</item>

        <item>Can a for loop contain another for loop?</item>
        <item>Yes</item>
        <item>No</item>
        <item>Compilation Error</item>
        <item>Runtime Error</item>

        <item>Can a Structure contain pointer to itself?</item>
        <item>Yes</item>
        <item>No</item>
        <item>Compilation Error</item>
        <item>Runtime Error</item>

        <item>What is size of void in bytes?</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>4</item>

        <item>Can any function call itself?</item>
        <item>Yes</item>
        <item>No</item>
        <item>Compilation Error</item>
        <item>Runtime Error</item>

        <item>C++ is superset of which langauge??</item>
        <item>C</item>
        <item>VB</item>
        <item>PASCAL</item>
        <item>BASIC</item>

        <item>How many object can be created of a Class in C++?</item>
        <item>There is no limit</item>
        <item>1</item>
        <item>5</item>
        <item>256</item>

        <item>When C Language was invented?</item>
        <item>1972</item>
        <item>1970</item>
        <item>1978</item>
        <item>1979</item>

        <item>What is the size of empty class?</item>
        <item>1</item>
        <item>0</item>
        <item>2</item>
        <item>4</item>

        <item>Can we assign null to void pointer?</item>
        <item>Yes</item>
        <item>No</item>
        <item>Compilation Error</item>
        <item>Runtime Error</item>

        <item>Can we create array of reference?</item>
        <item>Yes</item>
        <item>No</item>
        <item>Compilation Error</item>
        <item>Runtime Error</item>

        <item>Exceptions are Caught at ?</item>
        <item>Run Time</item>
        <item>Compilation Time</item>
        <item>Linking Time</item>
        <item>None</item>

        <item> Can we overload Constructor??</item>
        <item>Yes</item>
        <item>No</item>
        <item>Compilation Error</item>
        <item>Runtime Error</item>

    </string-array>
</resources>