<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="600dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundmillon"
            android:orientation="vertical">

            <ImageView
                android:layout_width="62dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/whowantsmillonicon"
                tools:ignore="ContentDescription"></ImageView>


            <TextView
                android:id="@+id/line_1"
                android:layout_width="283dp"
                android:layout_height="26dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/game_rules_1"
                android:textColor="@color/white"
                android:textSize="15dp"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"></TextView>

            <TextView
                android:id="@+id/line_2"
                android:layout_width="285dp"
                android:layout_height="165dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/game_rules_2"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:shadowColor="#000000"
                android:shadowRadius="1"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"></TextView>

            <TextView
                android:id="@+id/line_3"
                android:layout_width="278dp"
                android:layout_height="19dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/game_rules_3"
                android:textColor="@color/white"
                android:textSize="15dp"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"></TextView>

            <TextView
                android:id="@+id/line_4"
                android:layout_width="286dp"
                android:layout_height="155dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/game_rules_4"
                android:textColor="@color/white"
                android:textSize="15dp"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"></TextView>


            <Button
                android:id="@+id/return_to_main"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="12dp"
                android:textAllCaps="false"
                android:text="Return to Menu"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
